Regression Regularization Methods

--- a/MultipleLinearRegression/main.ipynb
+++ b/MultipleLinearRegression/main.ipynb
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -596,7 +596,7 @@
     }
    ],
    "source": [
-    "#compute the RMSE for more intuitive results\n",
+    "#compute the RMSE for more intuitive results 140e de marge d'erreur\n",
     "np.sqrt(19631.83)"
    ]
   }
