--- a/RegressionRegularizationMethods/main.ipynb
+++ b/RegressionRegularizationMethods/main.ipynb
@@ -710,16 +710,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Scores de la validation croisée (erreur quadratique moyenne) : [8.07584466e+12 1.19079302e+12 1.03110333e+12 9.92901297e+11\n",
-      " 2.13384814e+12]\n",
-      "Score moyen de la validation croisée (erreur quadratique moyenne) : 2684898089493.655\n"
+     "ename": "NameError",
+     "evalue": "name 'model' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mnumpy\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m \u001b[38;5;21;01mnp\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Ajouter une validation croisée pour le modèle Lasso\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m cv_scores \u001b[38;5;241m=\u001b[39m cross_val_score(\u001b[43mmodel\u001b[49m, X, y, cv\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m2\u001b[39m, scoring\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mneg_mean_squared_error\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Convertir les scores négatifs en positifs pour obtenir l'erreur quadratique moyenne\u001b[39;00m\n\u001b[0;32m      8\u001b[0m cv_scores \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mabs(cv_scores)\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'model' is not defined"
      ]
     }
    ],
@@ -728,7 +730,7 @@
     "import numpy as np\n",
     "\n",
     "# Ajouter une validation croisée pour le modèle Lasso\n",
-    "cv_scores = cross_val_score(model, X, y, cv=5, scoring='neg_mean_squared_error')\n",
+    "cv_scores = cross_val_score(model, X, y, cv=2, scoring='neg_mean_squared_error')\n",
     "\n",
     "# Convertir les scores négatifs en positifs pour obtenir l'erreur quadratique moyenne\n",
     "cv_scores = np.abs(cv_scores)\n",
