--- a/LogisticRegression/main.ipynb
+++ b/LogisticRegression/main.ipynb
@@ -610,7 +610,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#Logistic Regression with scikit-learn"
+   ]
   }
  ],
  "metadata": {
